# visit_counter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README-github.md  README.md  docker-compose.dev.yml  docker-compose.yml
.forgejo/workflows/: docker-forgejo.yml  mirror-to-github.yml
.github/workflows/: docker-image.yml
assets/: style.css
backend_visit_counter/: Cargo.toml
backend_visit_counter/src/: main.rs  models.rs  persistent_counter.rs  svg_generator.rs
data/: counters_badges.example.json
frontend_visit_counter/: Cargo.toml  index.html
frontend_visit_counter/src/: app.rs  main.rs  services.rs  types.rs
frontend_visit_counter/src/components/: admin_panel.rs  alerts.rs  badge_generator.rs  mod.rs  modals.rs  navigation.rs
src/: main.rs  models.rs  persistent_counter.rs  svg_generator.rs
static/assets/: minimal-icons.css  style.css
