[package]
name = "frontend_visit_counter"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = { version = "0.11", features = ["net", "storage"] }
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Element",
  "Event",
  "MouseEvent",
  "InputEvent",
  "SubmitEvent",
  "Window",
  "Document",
  "Navigator",
  "Clipboard"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
urlencoding = "2.1"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }